--- a/client/src/app/shared/components/close-btn/close-btn.component.scss
+++ b/client/src/app/shared/components/close-btn/close-btn.component.scss
@@ -1,6 +1,6 @@
 #close-button {
   width: 2.5em;
-  height: 2.5em;
+  height: auto;
   margin: 0.5em;
 
   &:hover {
