--- a/client/src/app/shared/components/edit-btn/edit-btn.component.scss
+++ b/client/src/app/shared/components/edit-btn/edit-btn.component.scss
@@ -1,7 +1,6 @@
 #edit-button {
   width: 2.5em;
-  height: 2.5em;
-  margin: 0.5em 0.5em 0.5em 0;
+  height: auto;
 
   &:hover {
     cursor: pointer;
